criação de view para cadastro de usuário e ligação com controller

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,6 @@
       <% }); %>
       </tbody>
     </table>
-  <button class="primary button">Incluir Usuário</button>
+  <a class="primary button" href="users/create">Incluir Usuário</a>
   </body>
 </html>
