redirecionamento no botão voltar para index.ejs

--- a/views/users.ejs
+++ b/views/users.ejs
@@ -30,6 +30,6 @@
             </div>
         </div>
         <button type="submit" class="primary button">Cadastrar</button>
-        <a class="secondary button" href="">Voltar</a>
+        <a class="secondary button" href="/">Voltar</a>
     </form>
 </body>
